--- a/WebContent/userChat.xhtml
+++ b/WebContent/userChat.xhtml
@@ -24,6 +24,9 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 				<h:panelGroup layout="block" id="operatorDetails">
 					<h3>Operator name: <h:outputText value="#{userLoginController.operator.name}"></h:outputText></h3>
 				</h:panelGroup>
+				<h:form id="logoutForm" prependId="false">
+					<h:commandLink id="logoutLink" styleClass="btn btn-danger"><i class="glyphicon glyphicon-off"></i>Salir</h:commandLink>
+				</h:form>
 			</h:panelGroup>
 			
 			<!-- main column -->
