--- a/WebContent/operatorChat.xhtml
+++ b/WebContent/operatorChat.xhtml
@@ -18,7 +18,15 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 </h:head>
 <h:body>
 	<h:panelGroup layout="block" styleClass="container">
-		<h:panelGroup layout="block" styleClass="row">
+		<h:panelGroup layout="block" styleClass="row" rendered="#{!operator.logged}">
+			<h:panelGroup layout="block" styleClass="col-xs-offset-4 col-xs-4">
+				<h:form>
+					<h1>Debes de loguearte primero</h1>
+					<h:commandLink action="operatorLogin" styleClass="btn btn-primary" value="login"></h:commandLink>
+				</h:form>
+			</h:panelGroup>
+		</h:panelGroup>
+		<h:panelGroup layout="block" styleClass="row" rendered="#{operator.logged}">
 			<!--  left column -->
 			<h:panelGroup layout="block" id="operator" styleClass="col-xs-3">
 				
@@ -30,7 +38,7 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 						<h:form id="conversationsList" prependId="false">
 							<h:panelGroup layout="block" rendered="#{operatorChat.allowedToLogout}"> 
 								<h:panelGroup layout="block" class="form-group bg-danger text-danger notice">No hay conversaciones abiertas</h:panelGroup>
-								<h:commandLink id="logoutLink" styleClass="btn btn-danger"><i class="glyphicon glyphicon-off"></i>Salir</h:commandLink>
+								<h:commandLink id="logoutLink" styleClass="btn btn-danger" action="#{operatorChat.tryToLogout}"><i class="glyphicon glyphicon-off"></i>Salir</h:commandLink>
 							</h:panelGroup>
 							<ui:repeat value="#{operatorChatBean.conversations}" var="convD">
 								<h:panelGroup layout="block" styleClass="form-group user">
@@ -65,7 +73,7 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 						<h:message for="name" styleClass="help-block"></h:message>
 					</h:panelGroup>
 					<h:panelGroup layout="block" styleClass="form-group">
-					<h:commandButton value="send" onclick="sendChatMessage();" styleClass="btn btn-default" >
+					<h:commandButton value="send" onclick="sendChatMessage();" styleClass="btn btn-primary" >
 						<f:ajax/>
 					</h:commandButton>
 					</h:panelGroup>
