--- a/WebContent/operatorLogin.xhtml
+++ b/WebContent/operatorLogin.xhtml
@@ -17,7 +17,7 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 <h:body>
 	<div class="container">
 		<h:form id="loginForm" prependId="false" styleClass="col-md-offset-4 col-md-4">
-			<h2>Operator login</h2>
+			<h2>Login de operador</h2>
 			
 			<h:panelGroup layout="block" styleClass="form-group">
 				<h:outputLabel for="login" value="login:" styleClass="control-label"/>
