--- a/WebContent/userLogin.xhtml
+++ b/WebContent/userLogin.xhtml
@@ -18,7 +18,7 @@ xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	<div class="container">
 		<h:form id="loginForm" prependId="false" styleClass="col-md-offset-4 col-md-4">
 		
-			<h2>User login</h2>
+			<h2>Login de usuario</h2>
 			<h:panelGroup layout="block" styleClass="form-group #{not name.valid?'has-error':''}">
 				<h:outputLabel for="name" value="Name:" styleClass="control-label"/>
 				<h:inputText id="name" binding="#{name}" label="Name" value="#{userLoginBean.name}" required="true" styleClass="form-control"/>
